
2012-11-30  ChunEon Park (Hermet)

        * Fix the naviframe to resize it's items which are inserted.

2012-11-30  ChunEon Park (Hermet)

        * emit the signals for content_set/unset text_set/unset one time!

2012-12-02  Mike Blumenkrantz

        * Fix case where tooltips could go offscreen unnecessarily.

2012-12-03 Gustavo Sverzut Barbieri (k-s)

	* Add elm_need_edbus(), deprecate elm_need_e_dbus(), integrating
	edbus (v2).

2012-12-04  Cedric Bail

	* Fix a possible divide by zero in els_scroller animator.

2012-12-04  Murilo Pinoti Belluzzo (mbelluzzo)

	* Add elm_app_name_set/get(): Formal application name string.
	* Add elm_app_destkop_entry_set/get(): Path to '.desktop' file.
	* Add elm_sys_notify to expose System Notifications (D-Bus atm).

2012-12-04  Gwanglim Lee

        * Add window profile set/get API in elm_win

2012-12-05  Cedric Bail

	* Fix uninitialized data path in elm_flip, elm_gesture_layer,
	elm_interface_scrollable, els_scroller.

2012-12-05  Shilpa Onkar Singh (shilpa.singh@samsung.com)

	* Fix naviframe to not send hide signals even before item doens't created
  	yet.

2012-12-06  Cedric Bail

	* Fix possible segv in elm_quicklaunch infrastructure.
	* Fix elm_conform buffer to always finish with at least one '\0';
	* Fix forgotten break in elm_map that would have thrown error when the
	action was properly taken in fact.

2012-12-06  Daniel Juyung Seo (SeoZ)

	* Fix wheel scroll direction with shift.

2012-12-06  ChunEon Park (Hermet)

	* Fix the mapbuf to show the content always. Sometimes mapbuf couldn't show
	the content properly.

2012-12-07  Cedric Bail

	* Safer call to mkstemp in elm_cnp.
	* Simplify test in elm_entry_text_set.

2012-12-07  WooHyun Jung

	* Fix focus problem in multibuttonentry. Entry can get focus only when multibuttonentry is focused.

2012-12-08  ChunEon Park (Hermet)

	* Fix the naviframe title_set problem that caused the title visible status reset.