@@ -8,25 +8,22 @@ EAPI Eo_Op ELM_OBJ_PAN_BASE_ID = EO_NOOP;
 
 #define MY_PAN_CLASS_NAME "elm_pan"
 
-#define ELM_PAN_DATA_GET(o, sd) \
-  Elm_Pan_Smart_Data * sd = eo_data_get(o, MY_PAN_CLASS)
-
-#define ELM_PAN_DATA_GET_OR_RETURN(o, ptr)          \
-  ELM_PAN_DATA_GET(o, ptr);                         \
-  if (!ptr)                                         \
-    {                                               \
-       CRITICAL("No smart data for object %p (%s)", \
-                o, evas_object_type_get(o));        \
-       return;                                      \
+#define ELM_PAN_DATA_GET_OR_RETURN(o, ptr)			\
+  Elm_Pan_Smart_Data *ptr = eo_data_get(o, MY_PAN_CLASS);	\
+  if (!ptr)							\
+    {								\
+       CRITICAL("No smart data for object %p (%s)",		\
+                o, evas_object_type_get(o));			\
+       return;							\
     }
 
-#define ELM_PAN_DATA_GET_OR_RETURN_VAL(o, ptr, val) \
-  ELM_PAN_DATA_GET(o, ptr);                         \
-  if (!ptr)                                         \
-    {                                               \
-       CRITICAL("No smart data for object %p (%s)", \
-                o, evas_object_type_get(o));        \
-       return val;                                  \
+#define ELM_PAN_DATA_GET_OR_RETURN_VAL(o, ptr, val)		\
+  Elm_Pan_Smart_Data *ptr = eo_data_get(o, MY_PAN_CLASS);	\
+  if (!ptr)							\
+    {								\
+       CRITICAL("No smart data for object %p (%s)",		\
+                o, evas_object_type_get(o));			\
+       return val;						\
     }
 
 static const char SIG_CHANGED[] = "changed";
@@ -286,7 +283,7 @@ _elm_pan_content_set(Evas_Object *obj,
 {
    Evas_Coord w, h;
 
-   ELM_PAN_DATA_GET(obj, psd);
+   ELM_PAN_DATA_GET_OR_RETURN(obj, psd);
 
    if (content == psd->content) return;
    if (psd->content)
