@@ -86,6 +86,7 @@ Fixes:
    * Safer call to mkstemp in elm_cnp.
    * Simplify test in elm_entry_text_set.
    * Fix focus problem in multibuttonentry. Entry can get focus only when multibuttonentry is focused.
+   * Make sure private data is not NULL in elm_interface_scrollable.
 
 Removals:
 
